Tests/Pass/pass_1.mason
proc foo();

proc foo2() -> s32;

proc foo3()
-> s32;

proc
foo4
(
	     )
->
s32
;