tests/fail/fail_7.mason
module x;

() proc foo() -> s32;